style: fix spacing

--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -15,7 +15,7 @@
         margin-bottom: 15px;
 
         @media screen and (min-width: 992px) {
-            margin-bottom: 0;
+            margin-bottom: 10px;
         }
     }
 
